kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/dblink: "true"
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: MYSQL_HOST
              value: db
          image: gettingradinir-backend:latest
          name: backend
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
