kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/dblink: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: MARIADB_DATABASE
              value: ir_app_data
            - name: MARIADB_PASSWORD
              value: ThePassword
            - name: MARIADB_ROOT_PASSWORD
              value: ThePassword
            - name: MARIADB_USER
              value: springuser
          image: mariadb:latest
          name: db
          resources: {}
      restartPolicy: Always
status: {}
