kubernetes/backend-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: radinir-backend
  labels:
    app: radinir
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: radinir
    tier: backend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radinir-backend
  labels:
    app: radinir
spec:
  selector:
    matchLabels:
      app: radinir
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radinir
        tier: backend
    spec:
      containers:
      - image: radinir-backend:0.1.3
        imagePullPolicy: IfNotPresent
        name: radinir-backend
        ports:
        - containerPort: 8080
        - containerPort: 3306
