kubernetes/mariadb-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: radinir-mariadb
  labels:
    app: radinir
spec:
  ports:
    - port: 3306
  selector:
    app: radinir
    tier: mariadb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radinir-mariadb
  labels:
    app: radinir
spec:
  selector:
    matchLabels:
      app: radinir
      tier: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radinir
        tier: mariadb
    spec:
      containers:
      - image: mariadb:latest
        name: mariadb
        ports:
        - containerPort: 3306
          name: radinir-mariadb
          protocol: TCP
        volumeMounts:
        - name: mariadb-persistent-storage
          mountPath: /var/lib/mariadb
      volumes:
      - name: mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: mariadb-pv-claim
